# restio

./: .coveragerc  .darglint  .flake8  .gitignore  .readthedocs.yml  .style.yapf  CONTRIBUTING.md  LICENSE  Pipfile  README.md  azure-pipelines.yml  conftest.py  pyproject.toml  pytest-benchmark.ini  pytest-profile.ini  pytest.ini  setup.py
docs/source/: FRAMEWORK.md  STATE.md  STRATEGIES.md  changelog.rst  conf.py  index.rst  modules.rst
docs/source/_static/: FRAMEWORK.md
docs/source/examples/: company_employee.rst  company_employee_with_restio.rst  company_employee_without_restio.rst  dummy.md
docs/source/framework/: api.rst  dao.rst  framework.rst  model.rst  modules.rst  query.rst  session.rst  strategies.rst  transaction.rst
examples/: company_employee_with_restio.py  company_employee_without_restio.py  restapiexample.py
restio/: __init__.py  cache.py  dao.py  event.py  graph.py  model.py  query.py  session.py  shared.py  state.py  transaction.py
restio/fields/: __init__.py  base.py  typed.py
src/integration/: cache.py  dao.py  graph.py  model.py  query.py  state.py  transaction.py
src/restio/: cache.py  graph.py  model.py  query.py  state.py  transaction.py
src/tests/: test.py
src/tests/unit/: base.py  test_cache.py  test_graph.py  test_model.py  (+3 more)
tests/: test.py
tests/integration/: test_example_company_employee.py
tests/performance/: shared.py  test_company_employee.py
tests/unit/: test_cache.py  test_dao.py  test_event.py  test_fields.py  test_graph.py  test_model.py  test_query.py  test_session.py  test_state.py  test_transaction.py
(+8 files in other folders)
