[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.coverage.run]
parallel = true
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pass",
    "TYPE_CHECKING"
]
fail_under=96.0

[tool.black]
line-length = 88
target-version = ['py37', 'py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
